2006-05-17  Andy Wingo  <wingo@pobox.com>

	* flumotion/worker/config.py (WorkerConfigXML.parseManager):
	Support an empty 'host' parameter == 'localhost'.
	(WorkerConfigXML.parseFeederports): Support having an empty set of
	feeder ports, as well as comma-separated feeder ports.

2006-05-16  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/admin.py
	(AdminAvatar.perspective_deleteComponent): New remote method for
	deleting components.

	* flumotion/manager/manager.py (Vishnu.deleteComponent): New
	method, deletes a component from the state.

	* flumotion/common/worker.py (ProcessProtocol): 
	* flumotion/worker/worker.py (JobProcessProtocol): Rework to
	export the guts of the process protocol in common/.
	(JobProcessProtocol.processEnded): Add a kindergarten-specific
	call here instead of in worker/.

2006-05-16  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	  Configure interface to listen on for http streamer.

2006-05-16  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/misc/porter/porter.py:
	* flumotion/component/misc/porter/porter.xml:
	  Allow configuring network interface to listen on.

2006-05-16  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/worker.py (PortSet): Pull in from
	flumotion.common.worker.

	* flumotion/common/worker.py (PortSet): Moved here from
	flumotion.worker.worker so that the FSP can use it to track ports
	on a server with multiple workers.

2006-05-15  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/misc/porter/porter.py:
	  Add deregisterPrefix method

2006-05-15  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/misc/porter/porter.py:
	* flumotion/component/misc/porter/porter.xml:
	* flumotion/component/misc/porter/porterclient.py:
	  Allow prefix matching in porter (needs an efficient algorithm)
	  Fix some more fallout from porter move.

2006-05-15  Thomas Vander Stichele  <thomas at apestaart dot org>
